<b>2009-02-04</b>

* Airport/airline search now usable without logging in
* Bug: Duplicated airlines when importing

<b>2009-02-01</b>

* Departure time and arrival time now supported
* Timezones and daylight savings time (DST) added to airport database/search
* Distance, duration, date, departure time, arrival time kept synced to each other
* Distance, duration validated before saving
* FlightMemory import now supports arrival times
* CSV format imports and exports departure times
* CSV spec updated to 0.4 (optional departure time added)
* Bug: Can now export the flights of a single airport

<b>2009-01-23</b>

* Airline always shown (if possible) in "List flights" view
* Airline autocompleted from flight number only if it looks like IATA/ICAO code
* Bug: Popup toolbar manipulation no longer attempted unless logged in

<b>2009-01-22</b>

* Upgraded to OpenLayers 2.7
* Enabled mod_deflate in Apache
* Future flights shown with dotted lines and ghosted airports
* Future flights in italics in flight listings

<b>2009-01-21</b>

* Facebook application released
* Facebook link status visible in Settings
* Bug: Don't blank stats on automatic relogin after page reload

<b>2009-01-19</b>

* Pressing "ENTER" after password submits log in form.
* Stats cleared out ("Loading...") during login/logout process.

<b>2009-01-15</b>

* Username lowercased before password hashing.  "Legacy" passwords still recognized.

<b>2009-01-12</b>

* Challenge-handshake authentication now implemented (password no longer sent in clear)
* Move to top of settings/signup screen on any error
* Bug: Linefeed, carriage return, tab now filtered out from flight notes
* Bug: Do not accept empty as new password

<b>2009-01-08</b>

* "Keep historical airline names?" now preserves FlightMemory airline names as is
* scriptaculous loading optimized (6 HTTP requests less)
* blank.gif added for OpenLayers 
* Bug: Multiple matches for airline names now processed correctly

<b>2009-01-07</b>
